--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.12.0
-pandas==0.21.1
-networkx==2.0
-pcst_fast==1.0.6
-jinja2==2.9
+numpy>=1.12.0
+pandas>=0.21.1
+scikit-learn>=0.19.0
+networkx>=2.0
+pcst_fast>=1.0.6
+jinja2>=2.9
 python-louvain==0.8
 goenrich==1.7.0
-scikit-learn==0.19.0
